# heartale

./: .gitignore  .pylintrc  AGENTS.md  Makefile  README.md  cool.ldr.heartale.json~  meson.build
.github/workflows/: main.yml
data/: cool.ldr.heartale.desktop.in  cool.ldr.heartale.gschema.xml  cool.ldr.heartale.metainfo.xml.in  cool.ldr.heartale.service.in  meson.build  release.md  version.json
data/icons/: meson.build
pkg/: meson.build
pkg/aur/: PKGBUILD  meson.build
pkg/deb/DEBIAN/: control  meson.build
pkg/flatpak/: cool.ldr.heartale.yaml  meson.build  python3-aiohttp.yaml
pkg/rpm/SPECS/: heartale.spec  meson.build
po/: LINGUAS  POTFILES  POTFILES.in  heartale.pot  meson.build  zh_CN.po
src/: __init__.py  book_tile.py  cli_reader.py  gui_app.py  heartale.gresource.xml  heartale.in  main.py  meson.build  page_bookshelf.py  page_empty.py  page_reader.py  preferences.py  window.py
src/entity/: __init__.py  book.py  time_read.py  utils.py
src/pages/: page_bookshelf.py  page_reader.py  reader_page.py  reader_session.py  reader_settings.py  reader_toc.py  shelf_page.py
src/res/: book_tile.ui  book_txt_parse_dialog.ui  heartale.cmb  heartale.gresource.xml  meson.build  page_bookshelf.ui  page_empty.ui  page_reader.ui  preference.ui  properties_view.ui  reader_page.ui  shelf_page.ui  shelf_row.ui  style.css  window.ui
src/servers/: __init__.py  legado.py  tools.py  txt.py
src/tts/: __init__.py  cache.py  cli.py  read_flow.py  read_runner.py  server_android.py
src/tts/backends/: __init__.py  android.py
src/utils/: __init__.py  check_update.py  debug.py  debug_gtk.py  gui.py  i18n.py  reader.py  text.py
src/widgets/: book_tile.py  book_txt_parse_dialog.py  dialog_input.py  main.py  pg_tag_view.py  properties_view.py  shelf_row.py
